# quarter-tone

./: .gitignore  .gitmodules  .prettierignore  README.md  eslint.config.js  index.html  manifest.webmanifest  package-lock.json  package.json  playwright.config.js  sw.js  vercel.json
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml
docs/: DEPLOYMENT.md
native/: CMakeLists.txt  README.md
native/Resources/webui/: .gitkeep
native/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
native/Source/bridge/: EventRouter.cpp  EventRouter.h  WebBridge.cpp  WebBridge.h
native/Source/dsp/: FeedbackDelay.cpp  FeedbackDelay.h  PolySynth.cpp  PolySynth.h  QuarterToneEngine.cpp  QuarterToneEngine.h  Reverb.cpp  Reverb.h  ScaleMapper.cpp  ScaleMapper.h
native/Source/midi/: MidiRouter.cpp  MidiRouter.h  NoteToMidi.cpp  NoteToMidi.h
native/Source/params/: Parameters.cpp  Parameters.h
native/tests/: CMakeLists.txt  PolySynthTest.cpp  ScaleMapperTest.cpp  test_main.cpp
scripts/: build-plugin-ui.sh
src/: scaleMapper.js  types.ts
src/games/: asteroids.js  breakout.js  frogger.js  galaga.js  ghost.js  invaders.js  kong.js  kongjr.js  manifest.js  outrun.js  pong.js  sequencer.js  snake.js  tetris.js
styles/: cabinet.css
tests/: scaleMapper.test.js
tests/e2e/: smoke.spec.js
